--- a/front/src/app/pages/login/login.page.scss
+++ b/front/src/app/pages/login/login.page.scss
@@ -4,7 +4,7 @@
 }
 
 .fondo{
-    background: #FAFAFA;;
+    background: #ffffff;;
   }
   
   .title{
@@ -21,3 +21,7 @@
   .tabs{
     display: none;
   }
+
+  ion-card {
+    height: 96%;
+    }
