--- a/front/src/app/pages/login/login.page.html
+++ b/front/src/app/pages/login/login.page.html
@@ -1,65 +1,96 @@
 <ion-content padding class="fondo">
-    <ion-card>
-      <ion-card-content class="fondo">
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-img class="logo borde" src="../../assets/icon/icon.jpg"></ion-img>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col class="center">
-              <ion-title color="primary" class="title">{{ "login.login" | translate }}</ion-title>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-label position="floating">Nombre de la finca</ion-label>
-                <ion-input type="text" name="farm_name" required autocomplete="off"></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col class="d-flex">
-              <ion-item>
-                <ion-label position="stacked">Vereda</ion-label>
-                <ionic-selectable
-                  name="id_muni"
-                  [items]="sideWalks"
-                  itemValueField="id"
-                  itemTextField="nombre"
-                  [hasVirtualScroll]="true"
-                  closeButtonText="Cancelar"
-                  [canSearch]="true">
-                </ionic-selectable>
+  <ion-grid class="padding-pri">
+    <ion-row>
+      <ion-col>
+        <ion-img class="logo borde" src="../../assets/icon/icon.jpg"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="center">
+        <ion-title color="primary" class="title">{{ "login.login" | translate }}</ion-title>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label position="floating">Nombre de la finca</ion-label>
+          <ion-input type="text" name="farm_name" required autocomplete="off"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="d-flex">
+        <ion-item>
+          <ion-label position="stacked">Departamentos</ion-label>
+          <ionic-selectable
+            name="id_departamento_dane"
+            [items]="departments"
+            itemValueField="id_departamento_dane"
+            itemTextField="nombre_departamento"
+            [hasVirtualScroll]="true"
+            closeButtonText="Cancelar"
+            [canSearch]="true"
+            (onChange)="getCity($event)">
+          </ionic-selectable>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="d-flex">
+        <ion-item>
+          <ion-label position="stacked">Municipios</ion-label>
+          <ionic-selectable
+            name="id_municipio_dane"
+            [items]="citys"
+            itemValueField="id_municipio_dane"
+            itemTextField="nombre_municipio"
+            [hasVirtualScroll]="true"
+            closeButtonText="Cancelar"
+            [canSearch]="true"
+            (onChange)="getSideWalk($event)"
+            >
+          </ionic-selectable>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="d-flex">
+        <ion-item>
+          <ion-label position="stacked">Vereda</ion-label>
+          <ionic-selectable
+            name="id_muni"
+            [items]="sideWalks"
+            itemValueField="id"
+            itemTextField="nombre"
+            [hasVirtualScroll]="true"
+            closeButtonText="Cancelar"
+            [canSearch]="true">
+          </ionic-selectable>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid class="padding-pri">
+    <ion-row>
+      <ion-col>
+        <ion-label position="stacked" class="small">Localización</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button color="success" shape="round" expand="block" size="small">Obtener</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button color="warning" shape="round" expand="block" size="small">Ingresar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-button color="primary" shape="round" expand="block" type="submit" (click)="goHome()">Iniciar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-              </ion-item>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-label position="stacked">Localización</ion-label>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-button color="success" shape="round" expand="block" >Obtener</ion-button>
-            </ion-col>
-            <ion-col>
-              <ion-button color="warning" shape="round" expand="block" >Ingresar</ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-button color="primary" shape="round" expand="block" type="submit" (click)="goHome()">Iniciar</ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-card-content>
-    </ion-card>
 </ion-content>
