modal para ingresar latitud y longitud en login

--- a/front/src/app/pages/login/login.page.html
+++ b/front/src/app/pages/login/login.page.html
@@ -81,7 +81,7 @@
         <ion-button color="success" shape="round" expand="block" size="small">Obtener</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button color="warning" shape="round" expand="block" size="small">Ingresar</ion-button>
+        <ion-button color="warning" shape="round" expand="block" size="small" (click)="modalEnterLocation()">Ingresar</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
