--- a/front/src/app/pages/inquest/inquest.page.html
+++ b/front/src/app/pages/inquest/inquest.page.html
@@ -25,7 +25,7 @@
               </ion-select>
             </ion-item>
             <ion-item *ngIf="items2.tipo_pregunta == 3">
-              <ion-label position="floating" class="show"><b>{{ items2.pregunta }}</b></ion-label>
+              <ion-label position="floating" class="show small">{{ items2.pregunta }}</ion-label>
               <ion-input type="text" ></ion-input>
             </ion-item>
           </ion-col>
