--- a/front/src/app/pages/inicio/inicio.page.html
+++ b/front/src/app/pages/inicio/inicio.page.html
@@ -26,6 +26,10 @@
                       <ion-label>{{ "init.butler" | translate }}</ion-label>
                       <ion-radio slot="start" value="2"></ion-radio>
                     </ion-item>
+                    <ion-item>
+                      <ion-label>{{ "init.other" | translate }}</ion-label>
+                      <ion-radio slot="start" value="3"></ion-radio>
+                    </ion-item>
                   </ion-radio-group>
                 </ion-list>
               </ion-col>
