cambios para probar base64 en login

--- a/front/src/app/pages/login/login.page.html
+++ b/front/src/app/pages/login/login.page.html
@@ -92,6 +92,11 @@
         <ion-button color="warning" expand="block" size="small" (click)="modalEnterLocation()">{{ "button.enter" | translate }}</ion-button>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button color="success" size="small" expand="block" (ionChange)="image_base()">{{ "init.attached" | translate }}1</ion-button>
+      </ion-col>
+    </ion-row>
   </ion-grid>
   <ion-grid>
     <ion-row>
