--- a/front/src/app/pages/inquest/inquest.page.html
+++ b/front/src/app/pages/inquest/inquest.page.html
@@ -17,23 +17,33 @@
       
         <ion-row *ngFor="let items2 of items.preguntas; let i = index;">
           <ion-col>
-            <ion-item *ngIf="items2.tipo_pregunta == 1 || items2.tipo_pregunta == 2">
+            <ion-item *ngIf="items2.tipo_pregunta == 1">
               <ion-label position="stacked" class="show">{{ items2.pregunta }}</ion-label>
-              <ion-select (ionChange)="setValue(items2.id_pregunta, $event, items2.tipo_pregunta)" class="padding-top" okText="{{ 'general.select' | translate }}" cancelText="{{ 'general.cancel' | translate }}">
+              <ion-select (ionChange)="setValue(items2.id_pregunta, $event)" class="padding-top" okText="{{ 'general.select' | translate }}" cancelText="{{ 'general.cancel' | translate }}">
                 <ion-select-option *ngFor="let item of items2.respuestaspreguntas" value="{{item.id}}">{{item.respuesta}}</ion-select-option>
               </ion-select>
             </ion-item>
+            <ion-item *ngIf="items2.tipo_pregunta == 2">
+              <ion-label position="stacked" class="show">{{ items2.pregunta }}</ion-label>
+                  <ionic-selectable
+                  [items]="items2.respuestaspreguntas"
+                  itemValueField="id"
+                  itemTextField="respuesta"
+                  [hasVirtualScroll]="true"
+                  closeButtonText="Cancelar"
+                  [canSearch]="true"
+                  [isMultiple]="true"
+                  (onChange)="setValueIonSelectable(items2.id_pregunta, $event)"
+                  >
+                </ionic-selectable>
+            </ion-item>
             <ion-item *ngIf="items2.tipo_pregunta == 3">
               <ion-label position="floating" class="show small">{{ items2.pregunta }}</ion-label>
-              <ion-input type="text" (ionChange)="setValue(items2.id_pregunta, $event, items2.tipo_pregunta)" ></ion-input>
+              <ion-input type="text" (ionChange)="setValue(items2.id_pregunta, $event)" ></ion-input>
             </ion-item>
             <ion-item *ngIf="items2.tipo_pregunta == 4">
               <ion-label position="floating" class="show small">{{ items2.pregunta }}</ion-label>
-              <ion-input type="number" (ionChange)="setValue(items2.id_pregunta, $event, items2.tipo_pregunta)" ></ion-input>
-            </ion-item>
-            <ion-item *ngIf="items2.tipo_pregunta == 5">
-              <ion-label  class="show small">{{ items2.pregunta }}</ion-label>
-              <ion-button color="success" size="small" expand="block" (click)="takePhoto(items2.id_pregunta)">{{ "init.attached" | translate }}</ion-button>
+              <ion-input type="number" (ionChange)="setValue(items2.id_pregunta, $event)" ></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
